# cargo-up

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cargo-up/: Cargo.toml  Makefile
cargo-up-up/: Cargo.toml
cargo-up/cargo-up-derive/: Cargo.toml
cargo-up/cargo-up-derive/src/: lib.rs  utils.rs
cargo-up/cargo-up-derive/src/impls/: methods.rs  mod.rs  upgrader.rs
cargo-up/cargo-up-runner/: Cargo.toml
cargo-up/cargo-up-runner/src/: lib.rs
cargo-up/cargo-up-up/: Cargo.toml
cargo-up/cargo-up-up/src/: lib.rs
cargo-up/cargo-up-utils/: Cargo.toml
cargo-up/cargo-up-utils/src/: error.rs  lib.rs
cargo-up/clap_up/: Cargo.toml  README.md
cargo-up/rust-up/: Cargo.toml
cargo-up/rust-up/src/: lib.rs
cargo-up/rust-visitor/: Cargo.toml
cargo-up/rust-visitor/src/: lib.rs
cargo-up/src/cli/: dep.rs  error.rs  main.rs
cargo-up/src/cli/utils/: cargo.rs  crates.rs  error.rs  mod.rs  term.rs
cargo-up/src/lib/: helpers.rs  mod.rs  preloader.rs  runner.rs  upgrader.rs  utils.rs  version.rs  visitor.rs
cargo-up/src/lib/runner/: context.rs  helpers.rs  mod.rs  visitor_impl.rs
cargo-up/tests/: bad_metadata.rs  errors.rs  hook.rs  init.rs  minimum_version.rs  no_version.rs  rename_member.rs  rename_members.rs  rename_method.rs  rename_method_static.rs  rename_methods.rs  rename_methods_static.rs  rename_structs.rs  rename_variants.rs  sysroot.rs  utils.rs
cargo-up/tests/snapshots/: errors__bad_metadata.snap  errors__no_upgrader.snap  errors__package_not_found.snap  hook__hook_on-2.snap  hook__hook_on.snap  hook__utils__hook_on.snap  init__init-2.snap  init__init.snap  init__utils__init.snap  minimum_version__minimum_version-2.snap  minimum_version__minimum_version.snap  no_version__no_version-2.snap  no_version__no_version.snap  no_version__utils__no_version.snap  rename_member__rename_member-2.snap  rename_member__rename_member.snap  rename_member__utils__rename_member.snap  rename_members__rename_members-2.snap  rename_members__rename_members.snap  rename_members__utils__rename_members.snap  rename_method__rename_method-2.snap  rename_method__rename_method.snap  rename_method__utils__rename_method.snap  rename_method_static__rename_method_static-2.snap  rename_method_static__rename_method_static.snap  rename_method_static__utils__rename_method_static.snap  rename_methods__rename_methods-2.snap  rename_methods__rename_methods.snap  rename_methods__utils__rename_methods.snap  rename_methods_static__rename_methods_static-2.snap  rename_methods_static__rename_methods_static.snap  rename_structs__rename_structs-2.snap  rename_structs__rename_structs.snap  rename_structs__utils__rename_structs.snap  rename_variants__rename_members-2.snap  rename_variants__rename_members.snap  rename_variants__rename_variants-2.snap  rename_variants__utils__rename_members.snap  sysroot__sysroot-2.snap  sysroot__sysroot.snap  (+1 more)
fixtures/_run/on/: Cargo.toml
fixtures/bad_metadata/on/: Cargo.toml
fixtures/hook_on/: on.rs  upgradee.rs
fixtures/init/on/: Cargo.toml
fixtures/init/upgradee/: Cargo.toml
fixtures/minimum_version/on/: Cargo.toml
fixtures/rename_member/: Cargo.toml  on.rs  upgradee.rs
fixtures/rename_member/on/src/: main.rs
fixtures/rename_member/upgradee/: Cargo.toml
fixtures/rename_member/upgradee/src/: lib.rs
fixtures/rename_members/: on.rs  upgradee.rs
fixtures/rename_method/: on.rs
fixtures/rename_method_static/: on.rs  upgradee.rs
fixtures/rename_methods/: on.rs  upgradee.rs
fixtures/rename_structs/: on.rs  upgradee.rs
fixtures/rename_variants/: on.rs  upgradee.rs
fixtures/sysroot/: on.rs  upgradee.rs
fixtures/upgradee/: Cargo.toml
fixtures/upgrader/: Cargo.toml
fixtures/upgrader/src/: lib.rs
src/: main.rs
