[package]
name = "cargo-up"
version = "0.1.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Upgrade your dependencies by automatically fixing your code"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.9"
env_logger = "0.7"
rust-analyzer = { path = "../rust-analyzer/crates/rust-analyzer" }
ra_db = { path = "../rust-analyzer/crates/ra_db" }
ra_ide_db = { path = "../rust-analyzer/crates/ra_ide_db" }
ra_syntax = { path = "../rust-analyzer/crates/ra_syntax" }
ra_hir = { path = "../rust-analyzer/crates/ra_hir" }

[[bin]]
name = "cargo-up"
path = "src/main.rs"

[profile.release]
# lto = "thin"

[workspace]
members = [
	".",
	"cargo-up-up",
]
default-members = [
	".",
	"cargo-up-up",
]
