[package]
name = "cargo-up"
version = "0.0.4"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Upgrade your dependencies by automatically fixing your code"
repository = "https://github.com/pksunkara/cargo-up"
license = "MIT"

[[bin]]
name = "cargo-up"
path = "src/cli/main.rs"
required-features = ["cli"] # remove the need for this

[lib]
name = "cargo_up"
path = "src/lib/mod.rs"

[dependencies]
# required by lib and bin
semver = "0.9"
lazy_static = "1.4"
thiserror = "1.0"
console = "0.11"

# required by lib
ra_ap_ide_db = { version = "=0.0.16", optional = true }
ra_ap_hir = { version = "=0.0.16", optional = true }
ra_ap_text_edit = { version = "=0.0.16", optional = true }
ra_ap_base_db = { version = "=0.0.16", optional = true }
ra_ap_rust-analyzer = { version = "=0.0.16", optional = true }
rust-visitor = { path = "./rust-visitor", version = "0.2.1", optional = true }
paste = { version = "1.0.2", optional = true }
anyhow = { version = "1.0.34", optional = true }

# required by bin
clap = { version = "=3.0.0-beta.2", optional = true }
cargo_metadata = { version = "0.9", optional = true }
ureq = { version = "1.5.2", optional = true, features = ["tls", "json"], default-features = false }
serde = { version = "1.0.117", optional = true, features = ["derive"] }

[profile.release]
lto = "thin"

[features]
default = ["lib"]
lib = [
	"ra_ap_ide_db",
	"ra_ap_hir",
	"ra_ap_text_edit",
	"ra_ap_base_db",
	"ra_ap_rust-analyzer",
	"rust-visitor",
	"paste",
	"anyhow",
]
cli = [
	"clap",
	"cargo_metadata",
	"ureq",
	"serde",
]
docs = []

[workspace]
members = [
	"cargo-up-up",
	"rust-up",
	"rust-visitor",
]

[dev-dependencies]
insta = "0.16"
assert_cmd = "1.0"
