[package]
name = "cargo-up-derive"
version = "0.0.1"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Upgrade your dependencies by automatically fixing your code"
repository = "https://github.com/pksunkara/cargo-up"
license = "MIT"

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "0.4.9"
semver = "0.9"

[dev-dependencies]
cargo-up = { path = ".." }
