[package]
name = "cargo-up-utils"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Upgrade your dependencies by automatically fixing your code"
repository = "https://github.com/pksunkara/cargo-up"
license = "MIT"

[dependencies]
thiserror = "1.0.16"
semver = "0.9"
