[package]
name = "rust-up"
version = "0.0.4"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Automatic updater for rust"
repository = "https://github.com/pksunkara/cargo-up"
license = "MIT"

[dependencies]
cargo-up = { path = "..", version = "0.0.4" }

[package.metadata.workspaces]
independent = true
