[package]
authors     = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
description = "Visitor trait for Rust AST based on rust-analyzer"
edition     = "2018"
license     = "MIT"
name        = "rust-visitor"
repository  = "https://github.com/automa-app/cargo-up"
version     = "0.4.0"

[dependencies]
paste        = "1.0.2"
ra_ap_syntax = "=0.0.203"

[package.metadata.workspaces]
independent = true
